--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-  padding: 20px;
+  padding: 20px 32px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -41,6 +41,8 @@ header {
 
 .search__input::placeholder {
   color: var(--color-text-placeholder);
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .search__input:focus {
@@ -54,7 +56,7 @@ header {
   border: none;
   border-radius: 0 22px 22px 0;
   background-color: var(--color-background-grey);
-  padding-right: 14px;
+  padding-right: 17px;
   height: 100%;
 }
 
@@ -66,8 +68,8 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 45px;
-  padding: 0 50px;
+  gap: 42px;
+  padding: 0 37px;
 }
 
 .actions {
@@ -75,6 +77,10 @@ header {
   flex-direction: row;
   align-items: center;
   gap: 40px;
+}
+
+.actions > button:first-child  {
+  padding-right: 10px;
 }
 
 .actions__btn--notifications {
@@ -92,7 +98,7 @@ header {
   display: flex;
   align-items: center;
   position: absolute;
-  top: 2px;
+  top: 0;
   right: 2px;
   min-width: 18px;
   height: 18px;
@@ -130,7 +136,7 @@ header {
     display: none;
   }
   header {
-    padding: 12px 16px 20px;
+    padding: 12px 20px 20px 16px;
     height: auto;
   }
 
