--- a/src/components/VideoPreview/VideoCard.css
+++ b/src/components/VideoPreview/VideoCard.css
@@ -1,5 +1,5 @@
 .video-card {
-  margin-bottom: 23px;
+  margin-bottom: 28px;
 }
 
 .video-preview {
@@ -7,6 +7,7 @@
   aspect-ratio: 16 / 9;
   border-radius: 14px;
   position: relative;
+  min-height: 213px;
 }
 
 .video-preview__badge {
@@ -28,11 +29,11 @@
 
 .video-card__title {
   cursor: pointer;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 700;
   line-height: 33px;
   color: var(--color-text-dark);
-  margin-top: 10px;
+  margin-top: 13px;
 }
 
 .video-card__description {
@@ -43,7 +44,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 4px;
+  margin-top: 11px;
+}
+
+@media (max-width: 1150px) {
+  .video-preview {
+    min-height: 150px;
+  }
 }
 
 @media screen and (max-width: 590px) {
